--- a/movies/templates/createreview.html
+++ b/movies/templates/createreview.html
@@ -1,24 +1,27 @@
+<!-- movies/templates/createreview.html -->
+
 {% extends 'base.html' %}
+
 {% block content %}
-<div class="card mb-3">
+  <div class="card mb-3">
     <div class="row g-0">
         <div>
             <div class="card-body">
-                <h5 class="card-title">Add Review for {{ movie_detail.title }}</h5>             
-                  {% if error %}
-                    <div class="alert alert-danger mt-3" role="alert">
-                {{ error }}
-                    </div>
-                  {% endif %}
-                  <p class="card-text">
-                    <form method="post">
+                <h5 class="card-title">Addd Review for {{ movie.title }}</h5>
+                
+                {% if error %}
+                  <div class="alert alert-danger mt-3" role="alert">{{ error }}</div>    
+                {% endif %}
+                 <p class="card-text">
+                    <form action="" method="post">
                         {% csrf_token %}
                         {{ form.as_p }}
                         <button type="submit" class="btn btn-primary">Add Review</button>
                     </form>
-                  </p>
+                 </p>   
             </div>
         </div>
     </div>
-</div>
+</div>    
 {% endblock content %}
+    
