--- a/movies/templates/signup.html
+++ b/movies/templates/signup.html
@@ -1,13 +1,15 @@
-<!DOCTYPE html> <html>
+<!-- movies/templates/signup.html -->
+
+<!DOCTYPE html>
+<html>
 <head>
 <title>Movies App</title>
-<link href="https://cdn.jsdelivr.net/npm/
-bootstrap@5.1.1/dist/css/bootstrap.min.css"
-rel="stylesheet" crossorigin="anonymous"> </head>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+</head>
 <body>
     <div class="container">
-    <h2>Added {{ email }} to mailing list</h2> 
-    <a href="{% url 'home' %}">Home</a>
-
-</div>
-    </body> </html>
+        <h2>Added {{ email }} to mailing list</h2>
+        <a href="{% url 'home' %}">Home</a>
+    </div>
+</body>
+</html>
